# from-scratch-in-rust

./: README.md
browser-engine/: README.md
browser/browser-engine/: Cargo.toml
browser1/: README.md
browser2/src/: css.rs
bytecode-vm/: sample.lox
bytecode-vm/src/: compiler.rs  main.rs  parser.rs  token.rs  value.rs  vm.rs
codecrafters/: README.md
codecrafters/docker/: README.md
codecrafters/git/: README.md
codecrafters/redis/: README.md
container/: .gitignore  README.md
container/.devcontainer/: devcontainer.json  docker-compose.yml
container/src/: capabilities.rs  check_linux_version.rs  child.rs  cli.rs  config.rs  container.rs  errors.rs  hostname.rs  ipc.rs  main.rs  mount.rs  namespaces.rs  resources.rs  syscalls.rs
crafting-interpreters/bytecode-virtual-machine/: Cargo.toml  README.md  sample.lox
database/: Cargo.toml  README.md
database/docs/: wip.md
database/src/: backend.rs  btree.rs  frontend.rs  main.rs  old_backend.rs  schema.rs
database/tests/: e2e_test.rs
dns-guide/: Cargo.toml  README.md
dns-guide/src/: buffer.rs  header.rs  main.rs  packet.rs  question.rs  record.rs
dns-resolver/src/: question.rs
dns-server/: Cargo.toml
interpreter/: README.md
interpreter/tree-walk-interpreter/: README.md
lua-vm/: README.md
oauth-oidc/: Cargo.toml  README.md  compose.yaml
oauth-oidc/auth-server/: Cargo.toml  private.pem  public.pem
oauth-oidc/auth-server/src/: errors.rs  handlers.rs  main.rs  store.rs
oauth-oidc/client/: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml
oauth-oidc/client/app/: routes.ts  utils.ts
oauth-oidc/client/app/routes/: home.tsx
oauth-oidc/client/app/routes/oauth2/: callback.tsx  clients.tsx  index.tsx  store.ts
oauth-oidc/resource-server/: Cargo.toml
oauth-oidc/resource-server/src/: auth_server_client.rs  errors.rs  handlers.rs  main.rs
oauth-oidc/shared/: Cargo.toml
oauth-oidc/shared/src/: jwt.rs
os/: Cargo.toml  README.md
os/.cargo/: config.toml
os/src/: allocator.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
os/tests/: heap_allocation.rs  stack_overflow.rs
protocol-stack-in-rust/udp-using-syscall/: .gitignore  Makefile
runtime/wasm/: README.md
tcp/: Cargo.toml  README.md
tcp-from-nic/: .gitignore  Cargo.toml  Makefile  README.md
tcp-from-nic/.devcontainer/: devcontainer.json  docker-compose.yml
tcp-from-nic/src/: http.rs  ip.rs  main.rs  nic.rs  tcp.rs
tcp-from-nic/wireshark/: capture.pcap
tcp-ip/: Cargo.toml  Makefile  README.md
tcp-ip-klab/: Cargo.toml  README.md
tcp-ip-klab/src/: main.rs  net.rs
tcp-ip/.devcontainer/: Dockerfile
tcp-ip/src/: http.rs  main.rs
tcp/.devcontainer/: Dockerfile  compose.yml  devcontainer.json
tcp/microps/: Cargo.toml
tcp/scripts/: setup-netns.sh
tcp/src/: address.rs  arp.rs  ethernet.rs  ip.rs  lib.rs  main.rs  net.rs  socket.rs  syscall.rs  utils.rs
tcp/toytcp/: Cargo.toml
text-editor/: README.md
toy-layout-engine/src/: paint.rs
tree-walk-interpreter/: Cargo.toml  README.md  sample.lox
tree-walk-interpreter/src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  resolver.rs
udp-ip/: Cargo.toml  Makefile  README.md
udp-ip/.devcontainer/: Dockerfile
udp-ip/scripts/: setup-netns-with-router.sh  setup-netns.sh
udp-ip/src/: arp.rs  checksum.rs  ethernet.rs  icmp.rs  ip.rs  (+3 more)
wasm-runtime/tiny-wasm-runtime/: Cargo.toml
wasm-runtime/tiny-wasm-runtime/src/binary/: instruction.rs  module.rs  opcode.rs  section.rs  types.rs
wasm-runtime/tiny-wasm-runtime/src/execution/: import.rs  runtime.rs  store.rs  value.rs  wasi.rs
wasm-runtime/tiny-wasm-runtime/src/fixtures/: func_add.wat  func_call.wat  func_lts.wat  hello_world.wat
writing-an-os/: Cargo.toml
writing-an-os-in-rust/: Cargo.toml
(+66 files in other folders)
