[workspace]
members = [
    "auth-server",
    "resource-server",
    "client",
]

[workspace.dependencies]
axum = { version = "=0.8.3" }
serde = { version = "=1.0.219", features = ["derive"] }
tokio = { version = "=1.44.2", features = ["full"] }
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
