[workspace]
members = [
    "auth-server",
    "resource-server"
]

[workspace.dependencies]
axum = { version = "=0.8.3", features= ["macros"] }
base64 = { version = "=0.22.1" }
redis = { version = "=0.31.0", features = ["tokio-comp"] }
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = { version = "=1.0.140" }
sha2 = { version = "=0.10.9" }
tokio = { version = "=1.44.2", features = ["full"] }
tower-http = { version = "=0.6.2", features = ["cors"] }
tracing = { version = "=0.1.41" }
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
uuid = {  version = "=1.16.0", features = ["v4"] }
