[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

shared = { path = "../shared" }
