[package]
name = "resource-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

shared = { path = "../shared" }
