[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
