[package]
name = "tinywasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"     # エラーハンドリングを簡易にできるクレート
nom = "7.1.3"         # パーサーコンビネーター
nom-leb128 = "0.2.0"  # LEB128という可変長符号圧縮された数値をデコードするためのクレート
num-derive = "0.4.0"  # 数値型の変換を便利にするクレート
num-traits = "0.2.15" # 数値型の変換を便利にするクレート

[dev-dependencies]
wat = "=1.0.67"             # WATからWasmバイナリをコンパイルするためのクレート
pretty_assertions = "1.4.0" # テスト時の差分を見やすくしてくれるクレート
